add 5th excercise

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -20,7 +20,7 @@ rmd_files:
     - "Ex02-PointClustering.Rmd"
     - "Ex03-LineSimplification.Rmd"
     - "Ex04-LineSelection.Rmd"
-    # - "Ex05-PolygonAxis.Rmd"
+    - "Ex05-PolygonAxis.Rmd"
     # - "Ex06-ReliefGeneralization.Rmd"
 language:
   label:
