--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -17,11 +17,11 @@ rmd_files:
     # - "11-DataStructures.Rmd"
     # - "12-Databases.Rmd"
     - "Ex01-PointSelection.Rmd"
-    - "Ex02-PointClustering.Rmd"
-    - "Ex03-LineSimplification.Rmd"
-    - "Ex04-LineSelection.Rmd"
-    - "Ex05-PolygonAxis.Rmd"
-    - "Ex06-ReliefGeneralization.Rmd"
+    # - "Ex02-PointClustering.Rmd"
+    # - "Ex03-LineSimplification.Rmd"
+    # - "Ex04-LineSelection.Rmd"
+    # - "Ex05-PolygonAxis.Rmd"
+    # - "Ex06-ReliefGeneralization.Rmd"
 language:
   label:
     fig: 'Рис. '
